# marketsim-v2

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
analysis/: p3_tc_star.py
analysis/p6_llm/: README.md  analyze_table3.py  llm_cache_anthropic.json  llm_decisions.jsonl  run_p6_llm.py
docs/: AGENTS.md  DATA_SCHEMA.md  MIGRATION_NOTES.md  SCENARIOS.md
marketsim/: __init__.py  cli.py  types.py
marketsim/agents/: adversarial_llm.py  base.py  controller.py  graph_agents.py  market_makers.py  momentum_reversal.py  registry.py  rl_market_maker.py  zero_intelligence.py
marketsim/calibration/: anchors.py  cohort.py  sentiment.py
marketsim/engine/: market.py  orderbook.py
marketsim/llm/: client.py  prompts.py  providers.py
marketsim/metrics/: iteration.py  microstructure.py  systemic.py
marketsim/runner/: batch.py  simulation.py
marketsim/scenarios/: definitions.py  registry.py
marketsim/storage/: __init__.py  base.py  local_backend.py  supabase_backend.py
notebooks/: run_llm_adversary_on_colab.ipynb  run_on_colab.ipynb  run_paper5_on_colab.ipynb  run_paper6_on_colab.ipynb
tests/: test_composition.py  test_orderbook.py  test_qlearning.py  test_scenarios_and_run.py  test_signals.py
